implemented DAOs for cassandra
